--- a/resources/sass/utils/_variables.scss
+++ b/resources/sass/utils/_variables.scss
@@ -9,6 +9,7 @@ $light-gray: #f5f5f5;
 
 // Typography
 $font-family-base: Arial, Helvetica, sans-serif;
+$font-family: Arial, Helvetica, sans-serif; // Alias for consistency
 $font-size-base: 16px;
 $font-weight-normal: 400;
 $font-weight-bold: 700;
